--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
-/.gradle/
+**/bin/
+
+# Eclipse files
+*.settings
+*.project
+*.classpath
+
+# Ignore Gradle project-specific cache directory
+.gradle
+
+# Ignore Gradle build output directory
+build
